--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=0.6">
+</head>
 
 <body style="font-family:open sans">
 
