--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=0.6">
+	<meta name="viewport" content="width=device-width, initial-scale=0.4">
 </head>
 
-<body style="font-family:open sans">
+<body style="font-family:courier">
 
 	<canvas id="c" style="width:150px;height:300px;margin:25px 0px 0px 50px;float:left;display:block;"></canvas>
 
