--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=0.4">
 </head>
 
-<body style="font-family:courier">
+<body style="font-family:gill sans">
 
-	<canvas id="c" style="width:150px;height:300px;margin:25px 0px 0px 50px;float:left;display:block;"></canvas>
+	<canvas id="c" style="width:110px;height:300px;margin:25px auto;display:block;"></canvas>
 
-	<div id="key" style="float:left;margin:35px 0px 0px 0px">
-		<div style="width:15px;height:15px;background-color:#d14;float:left"></div> &nbsp; stolen seat<br>
-		<div style="width:15px;height:15px;background-color:#0af;float:left"></div> &nbsp; seated normally<br>
+	<div id="key" style="min-width:200px;max-width:500px;margin:10px auto;border-top:solid 1px #ddd;padding:20px">
+		<div style="width:15px;height:15px;background-color:#d14;float:left;margin-left:20px"></div> &nbsp; stolen seat<br>
+		<div style="width:15px;height:15px;background-color:#0af;float:left;margin-left:20px"></div> &nbsp; seated normally<br>
 		<div id="results"></div>
 	</div>
 
@@ -18,7 +18,7 @@
 		var c = document.getElementById("c")
 		var ctx = c.getContext("2d")
 
-		c.width = 150;
+		c.width = 110;
 		c.height = 300;
 
 		var seats = []
